# aws-sso-report

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  RELEASE_GUIDE.md  TESTING.md  cliff.toml  commitlint.config.js  iam.py  main.py  pyproject.toml  pytest.ini  release.config.js  requirements.txt  sample_security_report.md  setup-dev.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: commit-validation.yml  feature-branch-validation.yml  python.yml  release.yml
config/: account_classification.yaml  permission_scoring.yaml  permission_scoring_clean.yaml  permission_scoring_minimal.yaml
scripts/: quick-test.sh  release.sh  test-local.sh  test-quality.sh
src/: __init__.py  __version__.py  account_classifier.py  aws_clients.py  data_collector.py  data_models.py  permission_analyzer.py  permission_analyzer_v2.py  permission_scoring_config.py  report_generators.py  security_report_generator.py  utils.py
tests/: test_advanced_security_scoring.py  test_aws_clients.py  test_basic.py  test_data_collector.py  test_data_collector_simple.py  test_data_models.py  test_excel_justification.py  test_improved_justifications.py  test_integration_scoring.py  test_permission_analyzer.py  test_real_justification.py  test_report_generators.py  test_scoring_comparison.py  test_scoring_simple.py  test_utils.py
